# Rag-server

./: .gitignore  auth.py  database.py  dump.rdb  main.py  pyproject.toml  tasks.py
routers/: chats.py  files.py  projects.py  users.py
supabase/migrations/: 20260714164333_initial_schema.sql
