[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.43.50",
    "clerk-backend-api>=6.0.1",
    "fastapi>=0.139.0",
    "python-dotenv>=1.2.2",
    "supabase>=2.31.0",
    "uvicorn>=0.51.0",
]
