[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.43.50",
    "celery>=5.6.3",
    "clerk-backend-api>=6.0.1",
    "fastapi>=0.139.0",
    "langchain==0.3.27",
    "langchain-community==0.3.27",
    "langchain-openai==0.3.28",
    "python-dotenv>=1.2.2",
    "redis>=8.0.1",
    "scrapingbee>=2.0.2",
    "supabase>=2.31.0",
    "unstructured[all-docs]==0.18.11",
    "uvicorn>=0.51.0",
]
